[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player/Assets/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Assets/Player.png" type="Texture" id=2]
[ext_resource path="res://Player/Assets/Player Climb5.png" type="Texture" id=3]
[ext_resource path="res://Player/Assets/Player Climb3.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/Player Climb1.png" type="Texture" id=5]
[ext_resource path="res://Player/Assets/Player Climb2.png" type="Texture" id=6]
[ext_resource path="res://Player/Assets/Player Climb4.png" type="Texture" id=7]
[ext_resource path="res://Player/Assets/Player Jump2.png" type="Texture" id=8]
[ext_resource path="res://Player/Assets/Player Walk3.png" type="Texture" id=9]
[ext_resource path="res://Player/Assets/Player Walk2.png" type="Texture" id=10]
[ext_resource path="res://Player/Assets/Player Walk4.png" type="Texture" id=11]
[ext_resource path="res://Player/Assets/Player Jump1.png" type="Texture" id=12]
[ext_resource path="res://Player/Assets/Player Jump3.png" type="Texture" id=13]
[ext_resource path="res://Player/Assets/Player Jump4.png" type="Texture" id=14]
[ext_resource path="res://Player/Assets/Player Fall1.png" type="Texture" id=15]
[ext_resource path="res://Player/Assets/Player Fall2.png" type="Texture" id=16]
[ext_resource path="res://Player/Assets/Player Fall3.png" type="Texture" id=17]
[ext_resource path="res://Player/Assets/Player Fall4.png" type="Texture" id=18]
[ext_resource path="res://Fonts/yoster.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Player/Assets/JL2.wav" type="AudioStream" id=20]
[ext_resource path="res://Player/Assets/JL1.wav" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "climb",
"speed": 25.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "fall",
"speed": 15.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 1, 1, 0.921569, 1 )
font_data = ExtResource( 19 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
jump_height = 44.0
can_climb = false
can_double_jump = false
can_glide = false
can_gravity = false

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
playing = true
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="RotTween" type="Tween" parent="."]

[node name="STween" type="Tween" parent="."]

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BufferJump" type="Timer" parent="."]
wait_time = 0.2

[node name="ForceJump" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -24.0
margin_top = -32.0
margin_right = 28.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 4 )
text = "State"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -32 )
current = true
zoom = Vector2( 0.4, 0.4 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.05
drag_margin_top = 0.5
drag_margin_right = 0.05

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -12.0
bus = "Sound"

[node name="Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -16.0
bus = "Sound"

[node name="HoldingPos" type="Position2D" parent="."]
position = Vector2( 16, -8 )

[connection signal="timeout" from="Coyote" to="." method="_on_Coyote_timeout"]
[connection signal="timeout" from="BufferJump" to="." method="_on_BufferJump_timeout"]
[connection signal="timeout" from="ForceJump" to="." method="_on_ForceJump_timeout"]
